--- a/templates/rust/config.toml
+++ b/templates/rust/config.toml
@@ -20,5 +20,6 @@ create_output_dirs = true
 [build]
 build_command = "cargo check"
 test_command = "cargo test"
+lint_command = "cargo clippy -- -D warnings"
 verify_build = false
 verify_tests = false
