--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "CLI tool that orchestrates local Ollama LLM for code generation and verification"
 authors = ["WorkSplit Contributors"]
-license = "MIT"
+license = "AGPL-3.0-only"
 repository = "https://github.com/worksplit/worksplit"
 keywords = ["cli", "llm", "ollama", "code-generation"]
 categories = ["command-line-utilities", "development-tools"]
