--- a/examples/ts-split-demo/worksplit.toml
+++ b/examples/ts-split-demo/worksplit.toml
@@ -1,4 +1,4 @@
-# WorkSplit Configuration
+# WorkSplit Configuration for TypeScript Split Demo
 
 [project]
 language = "typescript"
@@ -11,14 +11,14 @@ timeout_seconds = 300
 [limits]
 max_output_lines = 900
 max_context_lines = 1000
-max_context_files = 2
+max_context_files = 3
 
 [behavior]
 stream_output = true
 create_output_dirs = true
 
 [build]
-build_command = "npm run build"
-test_command = "npm test"
-verify_build = true
-verify_tests = true
+build_command = "npx tsc --noEmit"
+lint_command = "npx eslint"
+verify_build = false
+verify_tests = false
